[package]
name = "fcp_routing"
version = "0.1.0"
authors = ["Valentin Lorentz <progval+git@progval.net>"]

[dependencies]
dht = { git = "https://github.com/rust-fcp/rust-dht.git", branch = "find-in-all-buckets" }
#dht = { git = "https://github.com/dtantsur/rust-dht.git" }
rustc-serialize = "^0.3" # Required to implement dht::GenericId
fcp_switching = { git = "https://github.com/rust-fcp/rust-fcp-switching.git" }

[dev-dependencies]
fcp_cryptoauth = { git = "https://github.com/rust-fcp/rust-fcp-cryptoauth.git" }
byteorder = "^0.5.3"
rand = "^0.3.15"
hex = "*"
