[package]
name = "fcp_routing"
version = "0.1.0"
authors = ["Valentin Lorentz <progval+git@progval.net>"]

[dependencies]
simple_kbuckets = "^0.2.0"
fcp_switching = { git = "https://github.com/rust-fcp/rust-fcp-switching.git" }

[dev-dependencies]
fcp_cryptoauth = { git = "https://github.com/rust-fcp/rust-fcp-cryptoauth.git" }
byteorder = "^0.5.3"
rand = "^0.3.15"
hex = "*"
